# lastbottlewines

./: .env.example  .gitignore  README.md  deploy_lambda.sh  iam_policy.json  pyproject.toml  setup.sh
data/user_configs/: template.yaml
src/lastbottlewines/: config.py  lambda_handler.py  last_bottle.py  log.py  notifier.py  s3.py  scorer.py  scraper.py  utils.py  wine_database.py
tests/: test_integration.py
